--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -4,13 +4,13 @@
   author = {Agrawal, Shreya and Barrington, Luke and Bromberg, Carla and Burge, John and Gazen, Cenk and Hickey, Jason},
   year = {2019},
   month = dec,
-  archiveprefix = {arXiv},
+  journal = {arXiv:1912.12132 [cs, stat]},
   eprint = {1912.12132},
   eprinttype = {arxiv},
-  file = {/Users/thesofakillers/Zotero/storage/MJ38L26Q/Agrawal et al_2019_Machine Learning for Precipitation Nowcasting from Radar Images.pdf;/Users/thesofakillers/Zotero/storage/S7JESKIG/1912.html},
-  journal = {arXiv:1912.12132 [cs, stat]},
+  primaryclass = {cs, stat},
+  archiveprefix = {arXiv},
   keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Statistics - Machine Learning},
-  primaryclass = {cs, stat}
+  file = {/Users/thesofakillers/Zotero/storage/MJ38L26Q/Agrawal et al_2019_Machine Learning for Precipitation Nowcasting from Radar Images.pdf;/Users/thesofakillers/Zotero/storage/S7JESKIG/1912.html}
 }
 
 @book{ahrensHowTakeSmart2017,
@@ -21,17 +21,44 @@
   month = feb,
   publisher = {{S\"onke Ahrens}},
   googlebooks = {lHDsDwAAQBAJ},
-  keywords = {Reference / Writing Skills,Self-Help / Personal Growth / Memory Improvement,Self-Help / Self-Management / Time Management,Study Aids / Book Notes},
-  language = {en}
+  langid = {english},
+  keywords = {Reference / Writing Skills,Self-Help / Personal Growth / Memory Improvement,Self-Help / Self-Management / Time Management,Study Aids / Book Notes}
+}
+
+@article{bahdanauNeuralMachineTranslation2016,
+  title = {Neural {{Machine Translation}} by {{Jointly Learning}} to {{Align}} and {{Translate}}},
+  author = {Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+  year = {2016},
+  month = may,
+  journal = {arXiv:1409.0473 [cs, stat]},
+  eprint = {1409.0473},
+  eprinttype = {arxiv},
+  primaryclass = {cs, stat},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing,Statistics - Machine Learning},
+  file = {/Users/thesofakillers/Zotero/storage/4X5IFQMF/Bahdanau et al. - 2016 - Neural Machine Translation by Jointly Learning to .pdf;/Users/thesofakillers/Zotero/storage/3SFWNF2Q/1409.html}
+}
+
+@inproceedings{baroniDonCountPredict2014,
+  title = {Don't Count, Predict! {{A}} Systematic Comparison of Context-Counting vs. Context-Predicting Semantic Vectors},
+  booktitle = {Proceedings of the 52nd {{Annual Meeting}} of the {{Association}} for {{Computational Linguistics}} ({{Volume}} 1: {{Long Papers}})},
+  author = {Baroni, Marco and Dinu, Georgiana and Kruszewski, Germ{\'a}n},
+  year = {2014},
+  month = jun,
+  pages = {238--247},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Baltimore, Maryland}},
+  doi = {10.3115/v1/P14-1023},
+  file = {/Users/thesofakillers/Zotero/storage/PYW5WKUM/Baroni et al. - 2014 - Don't count, predict! A systematic comparison of c.pdf}
 }
 
 @misc{beckerKalmanFilterTutorial2018,
   title = {Kalman {{Filter Tutorial}}},
   author = {Becker, Alex},
   year = {2018},
-  file = {/Users/thesofakillers/Zotero/storage/5ISAE5L3/default.html},
   howpublished = {https://www.kalmanfilter.net/},
-  language = {en}
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/5ISAE5L3/default.html}
 }
 
 @misc{bellForecastingUberIntroduction2018,
@@ -40,24 +67,43 @@
   author = {Bell, Franziska and Smyl, Slawek},
   year = {2018},
   month = sep,
-  file = {/Users/thesofakillers/Zotero/storage/ZRRHXHN7/forecasting-introduction.html},
-  howpublished = {https://eng.uber.com/forecasting-introduction/},
   journal = {Uber Engineering Blog},
-  language = {en-US}
+  howpublished = {https://eng.uber.com/forecasting-introduction/},
+  langid = {american},
+  file = {/Users/thesofakillers/Zotero/storage/ZRRHXHN7/forecasting-introduction.html}
 }
 
 @article{brownLanguageModelsAre2020,
-  title = {Language {{Models}} Are {{Few}}-{{Shot Learners}}},
+  title = {Language {{Models}} Are {{Few-Shot Learners}}},
   author = {Brown, Tom B. and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and Agarwal, Sandhini and {Herbert-Voss}, Ariel and Krueger, Gretchen and Henighan, Tom and Child, Rewon and Ramesh, Aditya and Ziegler, Daniel M. and Wu, Jeffrey and Winter, Clemens and Hesse, Christopher and Chen, Mark and Sigler, Eric and Litwin, Mateusz and Gray, Scott and Chess, Benjamin and Clark, Jack and Berner, Christopher and McCandlish, Sam and Radford, Alec and Sutskever, Ilya and Amodei, Dario},
   year = {2020},
   month = jul,
-  archiveprefix = {arXiv},
+  journal = {arXiv:2005.14165 [cs]},
   eprint = {2005.14165},
   eprinttype = {arxiv},
-  file = {/Users/thesofakillers/Zotero/storage/SM8EDB9L/Brown et al_2020_Language Models are Few-Shot Learners.pdf;/Users/thesofakillers/Zotero/storage/3ZTAX4HU/2005.html},
-  journal = {arXiv:2005.14165 [cs]},
+  primaryclass = {cs},
+  archiveprefix = {arXiv},
   keywords = {Computer Science - Computation and Language},
-  primaryclass = {cs}
+  file = {/Users/thesofakillers/Zotero/storage/SM8EDB9L/Brown et al_2020_Language Models are Few-Shot Learners.pdf;/Users/thesofakillers/Zotero/storage/3ZTAX4HU/2005.html}
+}
+
+@article{cerqueiraEvaluatingTimeSeries2020,
+  title = {Evaluating Time Series Forecasting Models: {{An}} Empirical Study on Performance Estimation Methods},
+  shorttitle = {Evaluating Time Series Forecasting Models},
+  author = {Cerqueira, Vitor and Torgo, Luis and Mozetic, Igor},
+  year = {2020},
+  month = nov,
+  journal = {Machine Learning},
+  volume = {109},
+  number = {11},
+  eprint = {1905.11744},
+  eprinttype = {arxiv},
+  pages = {1997--2028},
+  issn = {0885-6125, 1573-0565},
+  doi = {10.1007/s10994-020-05910-7},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {/Users/thesofakillers/Zotero/storage/YCM2EPZM/Cerqueira et al. - 2020 - Evaluating time series forecasting models An empi.pdf;/Users/thesofakillers/Zotero/storage/GCWUBRLY/1905.html}
 }
 
 @inproceedings{chandorkarDynamicTimeLag2019,
@@ -67,8 +113,8 @@
   author = {Chandorkar, Mandar and Furtlehner, Cyril and Poduval, Bala and Camporeale, Enrico and Sebag, Michele},
   year = {2019},
   month = sep,
-  file = {/Users/thesofakillers/Zotero/storage/LIJ9XN76/Chandorkar et al. - 2019 - Dynamic Time Lag Regression Predicting What & Whe.pdf;/Users/thesofakillers/Zotero/storage/5HKKV2AJ/forum.html},
-  language = {en}
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/LIJ9XN76/Chandorkar et al. - 2019 - Dynamic Time Lag Regression Predicting What & Whe.pdf;/Users/thesofakillers/Zotero/storage/5HKKV2AJ/forum.html}
 }
 
 @article{friedStatisticsGeometricRepresentation1965,
@@ -76,16 +122,16 @@
   author = {Fried, D. L.},
   year = {1965},
   month = nov,
+  journal = {JOSA},
   volume = {55},
+  number = {11},
   pages = {1427--1435},
   publisher = {{Optical Society of America}},
   doi = {10.1364/JOSA.55.001427},
   copyright = {\&\#169; 1965 Optical Society of America},
-  file = {/Users/thesofakillers/Zotero/storage/VRRDGXZS/Fried_1965_Statistics of a Geometric Representation of Wavefront Distortion.pdf;/Users/thesofakillers/Zotero/storage/89UBAX22/abstract.html},
-  journal = {JOSA},
+  langid = {english},
   keywords = {Atmospheric turbulence,Inhomogeneous optical media,Optical systems,Wave propagation,Wavefront distortions,Wavefronts},
-  language = {EN},
-  number = {11}
+  file = {/Users/thesofakillers/Zotero/storage/VRRDGXZS/Fried_1965_Statistics of a Geometric Representation of Wavefront Distortion.pdf;/Users/thesofakillers/Zotero/storage/89UBAX22/abstract.html}
 }
 
 @article{gersLearningForgetContinual2000,
@@ -94,13 +140,13 @@
   author = {Gers, Felix A. and Schmidhuber, J{\"u}rgen and Cummins, Fred},
   year = {2000},
   month = oct,
+  journal = {Neural Computation},
   volume = {12},
+  number = {10},
   pages = {2451--2471},
   issn = {0899-7667},
   doi = {10.1162/089976600300015015},
-  file = {/Users/thesofakillers/Zotero/storage/3K4YWEGF/Gers et al. - 2000 - Learning to Forget Continual Prediction with LSTM.pdf;/Users/thesofakillers/Zotero/storage/HQAZ3FFE/Learning-to-Forget-Continual-Prediction-with-LSTM.html},
-  journal = {Neural Computation},
-  number = {10}
+  file = {/Users/thesofakillers/Zotero/storage/3K4YWEGF/Gers et al. - 2000 - Learning to Forget Continual Prediction with LSTM.pdf;/Users/thesofakillers/Zotero/storage/HQAZ3FFE/Learning-to-Forget-Continual-Prediction-with-LSTM.html}
 }
 
 @techreport{goldmanBasicsHypothesisTests2018,
@@ -108,11 +154,11 @@
   author = {Goldman, Daniel S.},
   year = {2018},
   month = aug,
-  institution = {{Center for Open Science}},
-  file = {/Users/thesofakillers/Zotero/storage/UNK8QZN9/Goldman_2018_The Basics of Hypothesis Tests and Their Interpretations.pdf;/Users/thesofakillers/Zotero/storage/MPV89UFQ/u2csn.html},
   journal = {OSF Preprints},
-  language = {en},
-  number = {u2csn}
+  number = {u2csn},
+  institution = {{Center for Open Science}},
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/UNK8QZN9/Goldman_2018_The Basics of Hypothesis Tests and Their Interpretations.pdf;/Users/thesofakillers/Zotero/storage/MPV89UFQ/u2csn.html}
 }
 
 @misc{gollwitzerImperativeVsDeclarative2020,
@@ -120,10 +166,10 @@
   author = {Gollwitzer, Zach},
   year = {2020},
   month = jan,
-  file = {/Users/thesofakillers/Zotero/storage/N3HWPZEZ/imperative-vs-declarative-programming-procedural-functional-and-oop-b03a53ba745c.html},
-  howpublished = {https://medium.com/@zach.gollwitzer/imperative-vs-declarative-programming-procedural-functional-and-oop-b03a53ba745c},
   journal = {Medium},
-  language = {en}
+  howpublished = {https://medium.com/@zach.gollwitzer/imperative-vs-declarative-programming-procedural-functional-and-oop-b03a53ba745c},
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/N3HWPZEZ/imperative-vs-declarative-programming-procedural-functional-and-oop-b03a53ba745c.html}
 }
 
 @misc{grahamKeepYourIdentity2009,
@@ -131,23 +177,30 @@
   author = {Graham, Paul},
   year = {2009},
   month = feb,
-  file = {/Users/thesofakillers/Zotero/storage/IRXTCNYN/identity.html},
+  journal = {Paul Graham},
   howpublished = {http://www.paulgraham.com/identity.html},
-  journal = {Paul Graham}
+  file = {/Users/thesofakillers/Zotero/storage/IRXTCNYN/identity.html}
+}
+
+@misc{grahamSchlepBlindness,
+  title = {Schlep {{Blindness}}},
+  author = {Graham, Paul},
+  howpublished = {http://www.paulgraham.com/schlep.html},
+  file = {/Users/thesofakillers/Zotero/storage/X4R7ZR82/schlep.html}
 }
 
 @article{grangerInvestigatingCausalRelations1969,
-  title = {Investigating {{Causal Relations}} by {{Econometric Models}} and {{Cross}}-Spectral {{Methods}}},
+  title = {Investigating {{Causal Relations}} by {{Econometric Models}} and {{Cross-spectral Methods}}},
   author = {Granger, C. W. J.},
   year = {1969},
+  journal = {Econometrica},
   volume = {37},
+  number = {3},
   pages = {424--438},
   publisher = {{[Wiley, Econometric Society]}},
   issn = {0012-9682},
   doi = {10.2307/1912791},
-  file = {/Users/thesofakillers/Zotero/storage/K2QG69KW/Granger - 1969 - Investigating Causal Relations by Econometric Mode.pdf},
-  journal = {Econometrica},
-  number = {3}
+  file = {/Users/thesofakillers/Zotero/storage/K2QG69KW/Granger - 1969 - Investigating Causal Relations by Econometric Mode.pdf}
 }
 
 @inproceedings{groverDeepHybridModel2015,
@@ -156,14 +209,14 @@
   author = {Grover, Aditya and Kapoor, Ashish and Horvitz, Eric},
   year = {2015},
   month = aug,
+  series = {{{KDD}} '15},
   pages = {379--386},
   publisher = {{Association for Computing Machinery}},
   address = {{New York, NY, USA}},
   doi = {10.1145/2783258.2783275},
-  file = {/Users/thesofakillers/Zotero/storage/KGIAJZB2/Grover et al_2015_A Deep Hybrid Model for Weather Forecasting.pdf},
   isbn = {978-1-4503-3664-2},
   keywords = {_tablet,deep learning,gaussian processes,graphical models,machine learning,weather forecasting},
-  series = {{{KDD}} '15}
+  file = {/Users/thesofakillers/Zotero/storage/KGIAJZB2/Grover et al_2015_A Deep Hybrid Model for Weather Forecasting.pdf}
 }
 
 @inproceedings{guesalagaFASSFullAperture2016,
@@ -185,10 +238,10 @@
   author = {Hagelin, S and Masciadri, E and Lascaux, F},
   year = {2010},
   month = aug,
-  pages = {1},
-  file = {/Users/thesofakillers/Zotero/storage/UCMUCHXE/Hagelin et al. - The influence of the atmosphere on ground-based as.pdf},
   journal = {ESA Earth Observation Summer School},
-  language = {en}
+  pages = {1},
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/UCMUCHXE/Hagelin et al. - The influence of the atmosphere on ground-based as.pdf}
 }
 
 @misc{hambergGTD15Minutes2010,
@@ -196,8 +249,8 @@
   author = {Hamberg, Erlend},
   year = {2010},
   month = aug,
-  file = {/Users/thesofakillers/Zotero/storage/RUWU7JKD/gtd.html},
-  howpublished = {https://hamberg.no/gtd/}
+  howpublished = {https://hamberg.no/gtd/},
+  file = {/Users/thesofakillers/Zotero/storage/RUWU7JKD/gtd.html}
 }
 
 @book{herbertDune40thAnniversary2005,
@@ -208,53 +261,53 @@
   publisher = {{Penguin Group US}},
   googlebooks = {S5njq1FhUUgC},
   isbn = {978-1-4406-3129-0},
-  keywords = {Fiction / Science Fiction / General},
-  language = {en}
+  langid = {english},
+  keywords = {Fiction / Science Fiction / General}
 }
 
 @article{hochreiterLongShortTermMemory1997c,
-  title = {Long {{Short}}-{{Term Memory}}},
+  title = {Long {{Short-Term Memory}}},
   author = {Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
   year = {1997},
   month = nov,
+  journal = {Neural Computation},
   volume = {9},
+  number = {8},
   pages = {1735--1780},
   issn = {0899-7667},
   doi = {10.1162/neco.1997.9.8.1735},
-  file = {/Users/thesofakillers/Zotero/storage/ECTESAD9/Hochreiter and Schmidhuber - 1997 - Long Short-Term Memory.pdf;/Users/thesofakillers/Zotero/storage/HLF37L9Z/Long-Short-Term-Memory.html},
-  journal = {Neural Computation},
-  number = {8}
+  file = {/Users/thesofakillers/Zotero/storage/ECTESAD9/Hochreiter and Schmidhuber - 1997 - Long Short-Term Memory.pdf;/Users/thesofakillers/Zotero/storage/HLF37L9Z/Long-Short-Term-Memory.html}
 }
 
 @misc{informationeso.orgActiveOptics,
   title = {Active {{Optics}}},
   author = {{information@eso.org}},
-  file = {/Users/thesofakillers/Zotero/storage/NE4SAEIJ/active_optics.html},
   howpublished = {https://www.eso.org/public/teles-instr/technology/active\_optics/},
-  language = {en}
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/NE4SAEIJ/active_optics.html}
 }
 
 @misc{informationeso.orgAdaptiveOptics,
   title = {Adaptive {{Optics}}},
   author = {{information@eso.org}},
-  file = {/Users/thesofakillers/Zotero/storage/VFZH7QPN/adaptive_optics.html},
   howpublished = {https://www.eso.org/public/teles-instr/technology/adaptive\_optics/},
-  language = {en}
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/VFZH7QPN/adaptive_optics.html}
 }
 
 @article{innesDonUnrollAdjoint2019,
-  title = {Don't {{Unroll Adjoint}}: {{Differentiating SSA}}-{{Form Programs}}},
+  title = {Don't {{Unroll Adjoint}}: {{Differentiating SSA-Form Programs}}},
   shorttitle = {Don't {{Unroll Adjoint}}},
   author = {Innes, Michael},
   year = {2019},
   month = mar,
-  archiveprefix = {arXiv},
+  journal = {arXiv:1810.07951 [cs]},
   eprint = {1810.07951},
   eprinttype = {arxiv},
-  file = {/Users/thesofakillers/Zotero/storage/93FEGAEF/Innes - 2019 - Don't Unroll Adjoint Differentiating SSA-Form Pro.pdf;/Users/thesofakillers/Zotero/storage/U5255XA7/1810.html},
-  journal = {arXiv:1810.07951 [cs]},
+  primaryclass = {cs},
+  archiveprefix = {arXiv},
   keywords = {Computer Science - Programming Languages},
-  primaryclass = {cs}
+  file = {/Users/thesofakillers/Zotero/storage/93FEGAEF/Innes - 2019 - Don't Unroll Adjoint Differentiating SSA-Form Pro.pdf;/Users/thesofakillers/Zotero/storage/U5255XA7/1810.html}
 }
 
 @misc{innesWhatDifferentiableProgramming2019,
@@ -262,38 +315,38 @@
   author = {Innes, Mark},
   year = {2019},
   month = jul,
-  file = {/Users/thesofakillers/Zotero/storage/VKPXS79G/what-is-differentiable-programming.html},
-  howpublished = {https://fluxml.ai/2019/02/07/what-is-differentiable-programming.html}
+  howpublished = {https://fluxml.ai/2019/02/07/what-is-differentiable-programming.html},
+  file = {/Users/thesofakillers/Zotero/storage/VKPXS79G/what-is-differentiable-programming.html}
 }
 
 @article{JetStream2020,
   title = {Jet Stream},
   year = {2020},
   month = aug,
-  copyright = {Creative Commons Attribution-ShareAlike License},
-  file = {/Users/thesofakillers/Zotero/storage/BPI5GEHI/index.html},
   journal = {Wikipedia},
-  language = {en}
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/BPI5GEHI/index.html}
 }
 
 @inproceedings{kapoorAirplanesAloftSensor2014,
   title = {Airplanes Aloft as a Sensor Network for Wind Forecasting},
-  booktitle = {{{IPSN}}-14 {{Proceedings}} of the 13th {{International Symposium}} on {{Information Processing}} in {{Sensor Networks}}},
+  booktitle = {{{IPSN-14 Proceedings}} of the 13th {{International Symposium}} on {{Information Processing}} in {{Sensor Networks}}},
   author = {Kapoor, Ashish and Horvitz, Zachary and Laube, Spencer and Horvitz, Eric},
   year = {2014},
   month = apr,
   pages = {25--33},
   doi = {10.1109/IPSN.2014.6846738},
-  file = {/Users/thesofakillers/Zotero/storage/GCFRSQJ5/Kapoor et al_2014_Airplanes aloft as a sensor network for wind forecasting.pdf;/Users/thesofakillers/Zotero/storage/JL7IP2DF/6846738.html},
-  keywords = {_tablet,aircraft,airplanes,Airplanes,Atmospheric modeling,atmospheric techniques,balloons,commercial aircraft,geophysics computing,inference mechanisms,inference methods,instrumented high-altitude balloon,Kernel,large-scale sensor network,learned predictive model,learning (artificial intelligence),machine learning,Mathematical model,value-of-information analyses,weather forecasting,weather phenomena observation,wind,wind forecasting,Wind forecasting}
+  keywords = {_tablet,aircraft,airplanes,Airplanes,Atmospheric modeling,atmospheric techniques,balloons,commercial aircraft,geophysics computing,inference mechanisms,inference methods,instrumented high-altitude balloon,Kernel,large-scale sensor network,learned predictive model,learning (artificial intelligence),machine learning,Mathematical model,value-of-information analyses,weather forecasting,weather phenomena observation,wind,wind forecasting,Wind forecasting},
+  file = {/Users/thesofakillers/Zotero/storage/GCFRSQJ5/Kapoor et al_2014_Airplanes aloft as a sensor network for wind forecasting.pdf;/Users/thesofakillers/Zotero/storage/JL7IP2DF/6846738.html}
 }
 
 @misc{kowalksiHowGetRich2020,
   title = {How to {{Get Rich}} by {{Naval Ravikant}} ({{Detailed Summary}} + {{Infographic}}) | {{Sloww}}},
   author = {Kowalksi, Kyle},
   year = {2020},
-  file = {/Users/thesofakillers/Zotero/storage/QBJSUBDC/how-to-get-rich-naval-ravikant.html},
-  howpublished = {https://www.sloww.co/how-to-get-rich-naval-ravikant/}
+  howpublished = {https://www.sloww.co/how-to-get-rich-naval-ravikant/},
+  file = {/Users/thesofakillers/Zotero/storage/QBJSUBDC/how-to-get-rich-naval-ravikant.html}
 }
 
 @article{maengEnhancingStratosphericWeather2019,
@@ -301,13 +354,13 @@
   author = {Maeng, Kiwan and Kushan, Iskender and Lucia, Brandon and Kapoor, Ashish},
   year = {2019},
   month = dec,
-  archiveprefix = {arXiv},
+  journal = {arXiv:1912.02276 [cs, stat]},
   eprint = {1912.02276},
   eprinttype = {arxiv},
-  file = {/Users/thesofakillers/Zotero/storage/BSYY79M3/Maeng et al_2019_Enhancing Stratospheric Weather Analyses and Forecasts by Deploying Sensors.pdf;/Users/thesofakillers/Zotero/storage/8WNHHJTC/1912.html},
-  journal = {arXiv:1912.02276 [cs, stat]},
+  primaryclass = {cs, stat},
+  archiveprefix = {arXiv},
   keywords = {_tablet,Computer Science - Machine Learning,Statistics - Machine Learning},
-  primaryclass = {cs, stat}
+  file = {/Users/thesofakillers/Zotero/storage/BSYY79M3/Maeng et al_2019_Enhancing Stratospheric Weather Analyses and Forecasts by Deploying Sensors.pdf;/Users/thesofakillers/Zotero/storage/8WNHHJTC/1912.html}
 }
 
 @article{milliNowcastingTurbulenceParanal2019,
@@ -315,13 +368,13 @@
   author = {Milli, J. and Gonzalez, R. and Fluxa, P. R. and Chacon, A. and Navarette, J. and Sarazin, M. and Pena, E. and {Carrasco-Davis}, R. and Solarz, A. and Smoker, J. and Martayan, C. and Melo, C. and Sedaghati, E. and Mieske, S. and Hainaut, O. and {Tacconi-Garman}, L.},
   year = {2019},
   month = oct,
-  archiveprefix = {arXiv},
+  journal = {arXiv:1910.13767 [astro-ph, physics:physics]},
   eprint = {1910.13767},
   eprinttype = {arxiv},
-  file = {/Users/thesofakillers/Zotero/storage/V4VPWUKH/Milli et al_2019_Nowcasting the turbulence at the Paranal Observatory.pdf;/Users/thesofakillers/Zotero/storage/9UP6XSYR/1910.html},
-  journal = {arXiv:1910.13767 [astro-ph, physics:physics]},
+  primaryclass = {astro-ph, physics:physics},
+  archiveprefix = {arXiv},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Atmospheric and Oceanic Physics},
-  primaryclass = {astro-ph, physics:physics}
+  file = {/Users/thesofakillers/Zotero/storage/V4VPWUKH/Milli et al_2019_Nowcasting the turbulence at the Paranal Observatory.pdf;/Users/thesofakillers/Zotero/storage/9UP6XSYR/1910.html}
 }
 
 @misc{mullerSuccessLuckHard2020,
@@ -337,14 +390,14 @@
   author = {Novati, Guido and {de Laroussilhe}, Hugues Lascombes and Koumoutsakos, Petros},
   year = {2021},
   month = jan,
+  journal = {Nature Machine Intelligence},
   pages = {1--10},
   publisher = {{Nature Publishing Group}},
   issn = {2522-5839},
   doi = {10.1038/s42256-020-00272-0},
   copyright = {2021 The Author(s), under exclusive licence to Springer Nature Limited},
-  file = {/Users/thesofakillers/Zotero/storage/NUQYDM2S/Novati et al. - 2021 - Automating turbulence modelling by multi-agent rei.pdf;/Users/thesofakillers/Zotero/storage/X82SCHV3/s42256-020-00272-0.html},
-  journal = {Nature Machine Intelligence},
-  language = {en}
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/NUQYDM2S/Novati et al. - 2021 - Automating turbulence modelling by multi-agent rei.pdf;/Users/thesofakillers/Zotero/storage/X82SCHV3/s42256-020-00272-0.html}
 }
 
 @article{osbornAtmosphericScintillationAstronomical2015,
@@ -352,15 +405,15 @@
   author = {Osborn, J. and F{\"o}hring, D. and Dhillon, V. S. and Wilson, R. W.},
   year = {2015},
   month = sep,
+  journal = {Monthly Notices of the Royal Astronomical Society},
   volume = {452},
+  number = {2},
   pages = {1707--1716},
   publisher = {{Oxford Academic}},
   issn = {0035-8711},
   doi = {10.1093/mnras/stv1400},
-  file = {/Users/thesofakillers/Zotero/storage/9NTJBHBH/Osborn et al_2015_Atmospheric scintillation in astronomical photometry.pdf;/Users/thesofakillers/Zotero/storage/NYLDPERG/1067913.html},
-  journal = {Monthly Notices of the Royal Astronomical Society},
-  language = {en},
-  number = {2}
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/9NTJBHBH/Osborn et al_2015_Atmospheric scintillation in astronomical photometry.pdf;/Users/thesofakillers/Zotero/storage/NYLDPERG/1067913.html}
 }
 
 @article{pedersenSeeingMeasurementsDifferential1988,
@@ -368,19 +421,19 @@
   author = {Pedersen, H. and Rigaut, F. and Sarazin, M.},
   year = {1988},
   month = sep,
+  journal = {The Messenger},
   volume = {53},
   pages = {8--9},
-  file = {/Users/thesofakillers/Zotero/storage/URGWUDJU/Pedersen et al_1988_Seeing measurements with a differential image motion monitor.pdf},
-  journal = {The Messenger},
-  keywords = {Auxiliary Instrumentation:Seeing,Methods of Observation:Seeing,Seeing:Auxiliary Instrumentation,Seeing:Methods of Observation}
+  keywords = {Auxiliary Instrumentation:Seeing,Methods of Observation:Seeing,Seeing:Auxiliary Instrumentation,Seeing:Methods of Observation},
+  file = {/Users/thesofakillers/Zotero/storage/URGWUDJU/Pedersen et al_1988_Seeing measurements with a differential image motion monitor.pdf}
 }
 
 @misc{perryStructuredProcrastination2006,
   title = {Structured {{Procrastination}}},
   author = {Perry, John},
   year = {2006},
-  file = {/Users/thesofakillers/Zotero/storage/5BZSEXK4/www.structuredprocrastination.com.html},
-  howpublished = {http://www.structuredprocrastination.com/}
+  howpublished = {http://www.structuredprocrastination.com/},
+  file = {/Users/thesofakillers/Zotero/storage/5BZSEXK4/www.structuredprocrastination.com.html}
 }
 
 @article{sarazinESODifferentialImage1990,
@@ -388,30 +441,24 @@
   author = {Sarazin, M. and Roddier, F.},
   year = {1990},
   month = jan,
+  journal = {Astronomy and Astrophysics},
   volume = {227},
   pages = {294--300},
   issn = {0004-6361},
-  file = {/Users/thesofakillers/Zotero/storage/AVVPS25Z/Sarazin_Roddier_1990_The ESO differential image motion monitor.pdf},
-  journal = {Astronomy and Astrophysics},
-  keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes}
-}
-
-@misc{SchlepBlindness,
-  title = {Schlep {{Blindness}}},
-  file = {/Users/thesofakillers/Zotero/storage/X4R7ZR82/schlep.html},
-  howpublished = {http://www.paulgraham.com/schlep.html}
+  keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes},
+  file = {/Users/thesofakillers/Zotero/storage/AVVPS25Z/Sarazin_Roddier_1990_The ESO differential image motion monitor.pdf}
 }
 
 @misc{smylM4ForecastingCompetition2018,
-  title = {M4 {{Forecasting Competition}}: {{Introducing}} a {{New Hybrid ES}}-{{RNN Model}}},
+  title = {M4 {{Forecasting Competition}}: {{Introducing}} a {{New Hybrid ES-RNN Model}}},
   shorttitle = {M4 {{Forecasting Competition}}},
   author = {Smyl, Slawek and Ranganathan, Jai and Pasqua, Andrea},
   year = {2018},
   month = jun,
-  file = {/Users/thesofakillers/Zotero/storage/9W5R8GT2/m4-forecasting-competition.html},
-  howpublished = {https://eng.uber.com/m4-forecasting-competition/},
   journal = {Uber Engineering Blog},
-  language = {en-US}
+  howpublished = {https://eng.uber.com/m4-forecasting-competition/},
+  langid = {american},
+  file = {/Users/thesofakillers/Zotero/storage/9W5R8GT2/m4-forecasting-competition.html}
 }
 
 @misc{spurveyFourWaysReprogram2016,
@@ -419,10 +466,10 @@
   author = {Spurvey, Chris},
   year = {2016},
   month = dec,
-  file = {/Users/thesofakillers/Zotero/storage/EZQQS9QK/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c.html},
-  howpublished = {https://medium.com/@chrisspurvey/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c},
   journal = {Medium},
-  language = {en}
+  howpublished = {https://medium.com/@chrisspurvey/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c},
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/EZQQS9QK/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c.html}
 }
 
 @article{tokovininMeasuringTurbulenceProfile2002,
@@ -431,8 +478,8 @@
   year = {2002},
   volume = {266},
   pages = {104},
-  file = {/Users/thesofakillers/Zotero/storage/WKGQFU8X/Tokovinin_Kornilov_2002_Measuring turbulence profile from scintillations of single stars.pdf},
-  isbn = {9781583811061}
+  isbn = {9781583811061},
+  file = {/Users/thesofakillers/Zotero/storage/WKGQFU8X/Tokovinin_Kornilov_2002_Measuring turbulence profile from scintillations of single stars.pdf}
 }
 
 @article{vanmerrienboerTangentAutomaticDifferentiation2017,
@@ -441,19 +488,33 @@
   author = {{van Merri{\"e}nboer}, Bart and Wiltschko, Alexander B. and Moldovan, Dan},
   year = {2017},
   month = nov,
-  archiveprefix = {arXiv},
+  journal = {arXiv:1711.02712 [cs, stat]},
   eprint = {1711.02712},
   eprinttype = {arxiv},
-  file = {/Users/thesofakillers/Zotero/storage/BVEGULZZ/van Merriënboer et al_2017_Tangent.pdf;/Users/thesofakillers/Zotero/storage/4KICLZW7/1711.html},
-  journal = {arXiv:1711.02712 [cs, stat]},
+  primaryclass = {cs, stat},
+  archiveprefix = {arXiv},
   keywords = {Computer Science - Mathematical Software,Statistics - Machine Learning},
-  primaryclass = {cs, stat}
+  file = {/Users/thesofakillers/Zotero/storage/BVEGULZZ/van Merriënboer et al_2017_Tangent.pdf;/Users/thesofakillers/Zotero/storage/4KICLZW7/1711.html}
+}
+
+@article{vaswaniAttentionAllYou2017a,
+  title = {Attention {{Is All You Need}}},
+  author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
+  year = {2017},
+  month = dec,
+  journal = {arXiv:1706.03762 [cs]},
+  eprint = {1706.03762},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
+  file = {/Users/thesofakillers/Zotero/storage/REJG7MK8/Vaswani et al. - 2017 - Attention Is All You Need.pdf;/Users/thesofakillers/Zotero/storage/EXQJI2IJ/1706.html}
 }
 
 @misc{WhatJetStream,
   title = {What {{Is}} the {{Jet Stream}}? | {{NOAA SciJinks}} \textendash{} {{All About Weather}}},
-  file = {/Users/thesofakillers/Zotero/storage/JEBEY588/jet-stream.html},
-  howpublished = {https://scijinks.gov/jet-stream/}
+  howpublished = {https://scijinks.gov/jet-stream/},
+  file = {/Users/thesofakillers/Zotero/storage/JEBEY588/jet-stream.html}
 }
 
 @book{yatesMindIlluminatedComplete2017,
@@ -465,7 +526,35 @@
   publisher = {{Atria Books}},
   address = {{New York ; London ; Toronto ; Sydney ; New Delhi}},
   isbn = {978-1-5011-5698-4},
-  language = {English}
+  langid = {english}
+}
+
+@article{zhangUnderstandingDeepLearning2017,
+  title = {Understanding Deep Learning Requires Rethinking Generalization},
+  author = {Zhang, Chiyuan and Bengio, Samy and Hardt, Moritz and Recht, Benjamin and Vinyals, Oriol},
+  year = {2017},
+  month = feb,
+  journal = {arXiv:1611.03530 [cs]},
+  eprint = {1611.03530},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Machine Learning},
+  file = {/Users/thesofakillers/Zotero/storage/LRR4CXIX/Zhang et al. - 2017 - Understanding deep learning requires rethinking ge.pdf;/Users/thesofakillers/Zotero/storage/95W7WGCC/1611.html}
+}
+
+@article{zhangUnderstandingDeepLearning2021,
+  title = {Understanding Deep Learning (Still) Requires Rethinking Generalization},
+  author = {Zhang, Chiyuan and Bengio, Samy and Hardt, Moritz and Recht, Benjamin and Vinyals, Oriol},
+  year = {2021},
+  month = feb,
+  journal = {Communications of the ACM},
+  volume = {64},
+  number = {3},
+  pages = {107--115},
+  issn = {0001-0782},
+  doi = {10.1145/3446776},
+  file = {/Users/thesofakillers/Zotero/storage/7NALMHTK/Zhang et al. - 2021 - Understanding deep learning (still) requires rethi.pdf}
 }
 
 
